--- a/stc/lab 1.2
+++ b/stc/lab 1.2
@@ -14,15 +14,14 @@ struct vps
 int main()
 {
     vps arr[20];
-    int swt, p = 0;
+    int swt, len = 0;
   
     do
     {
         int i = 18;
         cout << "\n1. Add" << endl;
         cout << "2. Del" << endl;
-        cout << "3. Srch" << endl;
-        cout << "4. Wrt" << endl;
+        cout << "3. Length" << endl;
         cout << "0. End" << endl;
         cin >> swt;
         
@@ -32,7 +31,7 @@ int main()
             {
                 for (int f = 0; f < 19; f++)
                 {
-                    arr[i + 1] = arr[i];
+                    arr[i+1] = arr[i];
                     i--;
                 }
                 cin.ignore();
@@ -40,8 +39,9 @@ int main()
                 cout << "University: "; cin >> arr[0].nUn; 
                 cout << "Faculty: "; cin >> arr[0].fac;    
                 cout << "Specialty: "; cin >> arr[0].spc;  
-                cout << "Age: "; cin >> arr[0].age;        
+                cout << "Age: "; cin >> arr[0].age;  
                 
+                len++;
                 break;
             }
             
@@ -51,16 +51,14 @@ int main()
                 {
                     arr[d - 1] = arr[d];
                 }
+                
+                len--;
                 break;
                 
             }
             case 3:
             {
-                cout << arr[0].fio << " ";
-                cout << arr[0].nUn << " ";
-                cout << arr[0].fac << " ";
-                cout << arr[0].spc << " ";
-                cout << arr[0].age << endl;
+                cout << "Length: " << len << endl;
                 break;
             }
         }
